# bitbing-unity-bridge

./: .gitignore  BUARDA.md  CLAUDE.md  EKLENTİR.md  KONU.md
com.bitbing.unity-bridge/: CHANGELOG.md  LICENSE.md  README.md  package.json  setting_referance.example.json
com.bitbing.unity-bridge/Editor/: com.bitbing.unity-bridge.editor.asmdef
com.bitbing.unity-bridge/Editor/Bridge/: McpListener.cs  McpToolRegistry.cs
com.bitbing.unity-bridge/Editor/Commands/: AddComponentCommand.cs  BitBingCommandAttribute.cs  CompileScriptsCommand.cs  CreateGameObjectCommand.cs  CreateSceneCommand.cs  DeleteGameObjectCommand.cs  EnterPlayModeCommand.cs  ExitPlayModeCommand.cs  IAgentCommand.cs  OpenSceneCommand.cs  RunTestsCommand.cs  TakeScreenshotCommand.cs  WriteScriptCommand.cs
com.bitbing.unity-bridge/Editor/Helpers/: BitBingLog.cs  PidFileManager.cs  (+1 more)
com.bitbing.unity-bridge/Runtime/: AgentRuntimeBridge.cs  com.aigamedev.unity-bridge.runtime.asmdef
unity-mcp-server/: README.md  pyproject.toml
unity-mcp-server/src/unity_mcp_server/: __init__.py  chat_server.py  cli.py  llm_client.py  main.py  mcp_server.py  pid_manager.py  port_registry.py
unity-mcp-server/src/unity_mcp_server/agents/: ahbab.py  diafor.py  magnumpus.py  obsidere.py  orchestrator.py  patientia.py  unity_transport.py  vates.py
unity-mcp-server/src/unity_mcp_server/tools/: orchestrator_tools.py  unity_tools.py
unity-mcp-server/src/unity_mcp_server/utils/: message_formatter.py
unity-mcp-server/static/: index.html
unity-mcp-server/tests/: conftest.py  test_agents.py  test_mcp_server.py
(+13 files in other folders)
